# scriptorium

./: .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .semgrep.yml  Makefile  README.md  azure-pipelines.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
docs/: ARCHITECTURE.md  backlog.md  eval.md  runbook.md  security-findings.md  security.md
docs/adr/: 0000-template.md  0004-m2-rag-core-decisions.md  (+9 more)
e2e/: package-lock.json  package.json  playwright.config.ts
frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json
scripts/: e2e-smoke.ps1  run-eval.ps1
services/agent/: pyproject.toml
services/agent/eval/: queries.json
services/agent/eval/corpus/: employee-handbook.md  expense-policy.md  onboarding-guide.md  security-policy.md
services/agent/src/agent_service/: __init__.py  catalog.py  evaluation.py  loop.py  pii.py  rag.py  retrieval_client.py  tools.py  trace.py
services/agent/tests/: test_answer_endpoint.py  test_evaluation.py  test_health.py  test_loop.py  test_rag.py  test_tools.py
services/ingestion/: alembic.ini  pyproject.toml
services/ingestion/migrations/: env.py
services/ingestion/migrations/versions/: 0001_identity.py  0002_documents.py  0003_chat.py  0004_seed_demo.py  0005_chat_citations.py  0006_agent_traces.py  0007_seed_viewer.py
services/ingestion/src/ingestion_service/: __init__.py  chunk_store.py  chunker.py  extraction.py  graph_store.py  indexer.py  parsers.py  pipeline.py  storage.py
services/ingestion/tests/: test_chunker.py  test_extraction.py  test_health.py  test_indexer_retry.py  test_ingest.py  test_ingest_integration.py  test_parsers.py  test_pipeline.py
(+134 files in other folders)
