[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ingestion-service"
version = "0.1.0"
description = "Scriptorium ingestion service (write path): parse, chunk, embed, index"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0,<4",
    "gunicorn>=23",
    "alembic>=1.13",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "pymongo>=4.7",
    "bcrypt>=4.1",
    "requests>=2.32",
    "pypdf>=4.2",
    "python-docx>=1.1",
    "beautifulsoup4>=4.12",
    "neo4j>=5.20",
    # scriptorium-llm is installed by path (see packages/llm/README.md)
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "testcontainers[postgres,mongodb]>=4.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
